# cosmian-kms

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Cargo.toml
.github/scripts/: local_ossl_instl_no_fips.sh
crate/access/src/: access.rs
crate/cli/: Cargo.toml
crate/cli/src/: commands.rs  lib.rs  main.rs
crate/cli/src/actions/: access.rs  login.rs  logout.rs
crate/cli/src/actions/cover_crypt/: policy.rs
crate/cli/src/actions/shared/: export_key.rs  unwrap_key.rs  wrap_key.rs
crate/cli/src/actions/symmetric/: decrypt.rs  encrypt.rs  mod.rs
crate/cli/src/error/: mod.rs
crate/cli/src/tests/: access.rs  auth_tests.rs  new_database.rs  test_utils.rs
crate/cli/src/tests/attributes/: delete.rs  get.rs  set.rs  test_set_attribute.rs
crate/cli/src/tests/certificates/: certify.rs  encrypt.rs  export.rs  import.rs  validate.rs
crate/cli/src/tests/cover_crypt/: conf.rs  encrypt_decrypt.rs  master_key_pair.rs  policy.rs  rekey.rs  user_decryption_keys.rs
crate/cli/src/tests/elliptic_curve/: create_key_pair.rs  encrypt_decrypt.rs
crate/cli/src/tests/google_cmd/: identities.rs  keypairs.rs
crate/cli/src/tests/rsa/: create_key_pair.rs  encrypt_decrypt.rs
crate/cli/src/tests/shared/: destroy.rs  export.rs  export_import.rs  import.rs  import_export_wrapping.rs  locate.rs  revoke.rs  wrap_unwrap.rs
crate/cli/src/tests/symmetric/: create_key.rs  encrypt_decrypt.rs  rekey.rs
crate/cli/test_data/configs/: kms.bad  kms.json  kms_bad_secret.bad
crate/client/: Cargo.toml
crate/client/src/: access.rs  encodings.rs  export_utils.rs  kms_rest_client.rs  lib.rs
crate/client/src/error/: mod.rs
crate/config/: Cargo.toml  README.md
crate/config/src/: config.rs  io.rs  lib.rs
crate/config/src/error/: mod.rs  result.rs
crate/config/test_data/configs/: kms.bad  kms.json  kms_partial.json
crate/kmip/src/: lib.rs
crate/kmip/src/crypto/: secret.rs
crate/kmip/src/crypto/cover_crypt/: kmip_requests.rs  master_keys.rs  secret_key.rs
crate/kmip/src/crypto/elliptic_curves/: kmip_requests.rs  operation.rs
crate/kmip/src/crypto/rsa/: operation.rs
crate/kmip/src/crypto/symmetric/: symmetric_key.rs
crate/kmip/src/crypto/wrap/: tests.rs  unwrap_key.rs  wrap_key.rs
crate/kmip/src/kmip/: kmip_data_structures.rs  kmip_messages.rs  kmip_objects.rs  kmip_operations.rs  kmip_types.rs
crate/kmip/src/openssl/: certificate.rs  private_key.rs  public_key.rs
crate/pkcs11/: README.md
crate/pkcs11/hsm/: Cargo.toml
crate/pkcs11/hsm/src/: encryption_oracle_impl.rs  error.rs  lib.rs
crate/pkcs11/module/src/: tests.rs
crate/pkcs11/module/src/core/: attribute.rs
crate/pkcs11/module/src/traits/: mod.rs  (+1 more)
crate/pkcs11/proteccio/: Cargo.toml
crate/pkcs11/proteccio/src/: error.rs  hsm.rs  kms_hsm.rs  lib.rs  proteccio.rs  session.rs  sessions.rs  tests.rs
crate/pkcs11/proteccio/src/session/: aes.rs  mod.rs  rsa.rs  test.json
crate/pkcs11/provider/: Cargo.toml
crate/pkcs11/provider/src/: backend.rs  kms_object.rs  lib.rs  pkcs11_certificate.rs  pkcs11_private_key.rs  tests.rs
crate/pkcs11/sys/src/: pkcs11_unix.rs
crate/plugins/: Cargo.toml
crate/plugins/src/: encryption_oracle.rs  lib.rs
crate/plugins/src/error/: error.rs  mod.rs
crate/plugins/src/hsm/: encryption_oracle_impl.rs  interface.rs  mod.rs
crate/plugins/src/stores/: mod.rs
crate/pyo3/src/: py_kms_client.rs
crate/server/: Cargo.toml  README.md
crate/server/src/: error.rs  kms_server.rs  lib.rs  main.rs
crate/server/src/config/: db.rs  enclavedb.rs  https.rs  mod.rs
crate/server/src/core/: edgelessdb.rs  enclavedb.rs  extra_database_params.rs  implementation.rs  kms.rs  mod.rs  object_with_metadata.rs  retrieve_object_utils.rs
crate/server/src/database/: cached_database.rs  cached_sqlcipher.rs  database_trait.rs  database_traits.rs  mod.rs  mysql.rs  object_with_metadata.rs  pgsql.rs  query.sql  query_mysql.sql  retrieve_object_utils.rs  sqlite.rs  unwrapped_cache.rs
crate/server/src/hsm/: mod.rs
crate/server/src/middlewares/: api_token_auth.rs  jwt.rs
crate/server/src/routes/: access.rs  endpoint.rs  kmip.rs  mod.rs
crate/server/src/tests/: curve_25519_tests.rs  kmip_messages.rs  kmip_server_tests.rs  test_set_attribute.rs  test_utils.rs  test_validate.rs
crate/server_database/: Cargo.toml
crate/server_database/src/: kmip_operation.rs  lib.rs  object_with_metadata.rs  unwrapped_cache.rs
crate/server_database/src/core/: db_params.rs  mod.rs  objects.rs  permissions.rs  unwrapped_cache.rs
crate/server_database/src/error/: db_error.rs  result.rs
crate/server_database/src/stores/: cached_sqlcipher.rs  mod.rs  mysql.rs  pgsql.rs  sqlite.rs  store_traits.rs
crate/server_database/src/tests/: additional_redis_findex_tests.rs  database_tests.rs  find_attributes_test.rs  json_access_test.rs  list_uids_for_tags_test.rs  mod.rs  owner_test.rs  permissions_test.rs  tagging_tests.rs
crate/test_server/: Cargo.toml
crate/test_server/benches/: rsa_benches.rs  symmetric_benches.rs
crate/test_server/src/: lib.rs  test_server.rs
documentation/docs/: single_server_mode.md
documentation/docs/cli/: cli.md
test_data/configs/: kms.bad  kms.json
(+101 files in other folders)
