[package]
name = "cosmian_kms_config"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
# doc test linking as a separate binary is extremely slow
# and is not needed for internal lib
doctest = false

[features]

[dependencies]
cosmian_config_utils = { workspace = true }
cosmian_http_client = { workspace = true }
cosmian_logger = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
