[package]
name = "cosmian_hsm_traits"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Traits to implement to integrate HSMs to the KMS"

[lib]
doctest = false

[dependencies]
async-trait = "0.1"
thiserror = "1.0.61"
zeroize = "1.8"

[dev-dependencies]