[package]
name = "cosmian_hsm_traits"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Traits to implement to integrate HSMs to the KMS"

[lib]
doctest = false

[dependencies]
async-trait = { workspace = true }
cosmian_kms_plugins = { path = "../../plugins" }
thiserror = { workspace = true }
zeroize = { workspace = true, default-features = true }

[dev-dependencies]