[package]
name = "proteccio_pkcs11_loader"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Proteccio HSM PKCS#11 loader"

[lib]
doctest = false

[dependencies]
async-trait = "0.1"
cosmian_hsm_traits = { path = "../hsm" }
hex = "0.4.3"
libloading = "0.8.5"
pkcs11_sys = { path = "../sys" }
thiserror = "1.0.61"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
rand = "0.9.0-alpha.2"

[dev-dependencies]
serial_test = { version = "3.1.1", default-features = false }