[package]
name = "proteccio_pkcs11_loader"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Proteccio HSM PKCS#11 loader"

[lib]
doctest = false

[dependencies]
async-trait = { workspace = true }
cosmian_hsm_traits = { path = "../hsm" }
hex = { workspace = true }
libloading = "0.8.5"
pkcs11_sys = { path = "../sys" }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
rand = "0.9.0-alpha.2"
zeroize = { workspace = true }

[dev-dependencies]
serial_test = { version = "3.1.1", default-features = false }

[features]
# this feature is to activate to run Proteccio tests (they requires a Proteccio HSM)
proteccio = []