[package]
name = "proteccio_pkcs11_loader"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Proteccio HSM PKCS#11 loader"

[lib]
doctest = false

[dependencies]
async-trait = { workspace = true }
cosmian_hsm_traits = { path = "../hsm" }
cosmian_kms_plugins = { path = "../../plugins" }
hex = { workspace = true }
libloading = "0.8.5"
pkcs11_sys = { path = "../sys" }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = "0.9.0-alpha.2"
zeroize = { workspace = true }

[dev-dependencies]
serial_test = { version = "3.1.1", default-features = false }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }


[features]
# Enable this feature to run Proteccio tests (they require a Proteccio HSM)
proteccio = []